Update MANIFEST.in to include Fortran executables

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include LICENSE
 recursive-include PySeismoSoil/data/amplification *
 recursive-include PySeismoSoil/data/phase *
+recursive-include PySeismoSoil/exec_files *
