--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,7 +32,7 @@ jobs:
         python -m pip install -e .
     - name: Lint with flake8
       run: |
-        flake8 ./PySeismoSoil --count --statistics --max-line-length=88 --max-complexity=10
+        flake8 ./PySeismoSoil --count --statistics --ignore=C901,E203,E741,E221,W605,E502,E116,W504,E266,E114,E222 --max-line-length=99 --max-complexity=10
     - name: Test with pytest
       run: |
         pytest
