Include requirements.txt in MANIFEST.in; v0.4.9

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE
+include requirements.txt
 recursive-include PySeismoSoil/data/amplification *
 recursive-include PySeismoSoil/data/phase *
 recursive-include PySeismoSoil/exec_files *
