--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,16 @@ max-line-length = 88
 extend-ignore =  # we want to ignore the following rules
     I,       # module import sorting rules
     D100,    # Missing docstring in public module
+    D105,    # Missing docstring in magic method (such as __repr__)
     D107,    # Missing docstring in __init__
+    D205,    # 1 blank line between summary and description of docstring (not well implemented; too many false positives)
+    D400,    # 1st line should end with a period (too many false positives)
+    DAR000,  # (A generic error code thrown when Darglint encountered internal bugs)
+    LN002,   # doc/comment line too long
+    N802,    # function names should be lower case
+    N803,    # argument name should be lower case
+    N806,    # variable name in function should be lower case
+    RST210,  # Found open "**" without closing "**" (we need to ignore this because we have **kwargs)
     WPS2,    # all WPS complexity rules (https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/violations/complexity.html#complexity)
     WPS111,  # short variable or module names
     WPS114,  # names with underscored numbers pattern
