Check class_damping_calibration.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ extend-ignore =  # we want to ignore the following rules
     N803,    # argument name should be lower case
     N806,    # variable name in function should be lower case
     RST210,  # Found open "**" without closing "**" (we need to ignore this because we have **kwargs)
+    S101,    # usage of "assert"
     WPS2,    # all WPS complexity rules (https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/violations/complexity.html#complexity)
     WPS111,  # short variable or module names
     WPS114,  # names with underscored numbers pattern
