--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest wemake-python-styleguide flake8-mutable flake8-length
+        python -m pip install flake8 pytest wemake-python-styleguide flake8-mutable flake8-length flake8-absolute-import
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python -m pip install -e .
     - name: Lint with flake8
