Check class_simulation_results.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ docstring_style=numpy
 
 [flake8]
 max-line-length = 88
+select =
+    WPS317
 extend-ignore =  # we want to ignore the following rules
     I,       # module import sorting rules
     D100,    # Missing docstring in public module
