Check helper_generic.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ extend-ignore =  # we want to ignore the following rules
     N806,    # variable name in function should be lower case
     P101,    # format string does contain unindexed parameters (this is likely not implemented correctly)
     RST210,  # Found open "**" without closing "**" (we need to ignore this because we have **kwargs)
+    RST306,  # unknown target name (ignoring this because it doesn't play well with Python docstrings)
     S101,    # usage of "assert"
     WPS2,    # all WPS complexity rules (https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/violations/complexity.html#complexity)
     WPS111,  # short variable or module names
