--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ max-line-length = 88
 extend-ignore =  # we want to ignore the following rules
     I,       # module import sorting rules
     D100,    # Missing docstring in public module
+    D104,    # Missing docstring in public package
     D105,    # Missing docstring in magic method (such as __repr__)
     D107,    # Missing docstring in __init__
     D205,    # 1 blank line between summary and description of docstring (not well implemented; too many false positives)
