Expand style checking to tests

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,9 +34,11 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 --config=setup.cfg PySeismoSoil/
+        flake8 --config=setup.cfg tests/
     - name: Lint with flake8 (another pass, focusing on WPS317)
       run: |
         flake8 --config=setup.cfg --select WPS317 PySeismoSoil/
+        flake8 --config=setup.cfg --select WPS317 tests/
     - name: Test with pytest
       run: |
         pytest
