--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ extend-ignore =  # we want to ignore the following rules
     LN002,   # doc/comment line too long
     N802,    # function names should be lower case
     N803,    # argument name should be lower case
+    N813,    # camelcase imported as lowercase
     N806,    # variable name in function should be lower case
     P101,    # format string does contain unindexed parameters (this is likely not implemented correctly)
     RST210,  # Found open "**" without closing "**" (we need to ignore this because we have **kwargs)
