--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,12 +33,12 @@ jobs:
         python -m pip install -e .
     - name: Lint with flake8
       run: |
-        flake8 --config=setup.cfg PySeismoSoil/
-        flake8 --config=setup.cfg --ignore=D101,D102,N801 tests/
+        flake8 --config=flake8.cfg PySeismoSoil/
+        flake8 --config=flake8.cfg --ignore=D101,D102,N801 tests/
     - name: Lint with flake8 (another pass, focusing on WPS317)
       run: |
-        flake8 --config=setup.cfg --select WPS317 PySeismoSoil/
-        flake8 --config=setup.cfg --select WPS317 tests/
+        flake8 --config=flake8.cfg --select WPS317 PySeismoSoil/
+        flake8 --config=flake8.cfg --select WPS317 tests/
     - name: Test with pytest
       run: |
         pytest
