Ignore DAR rules

--- a/flake8.cfg
+++ b/flake8.cfg
@@ -11,7 +11,7 @@ extend-ignore =  # we want to ignore the following rules
     D107,    # Missing docstring in __init__
     D205,    # 1 blank line between summary and description of docstring (not well implemented; too many false positives)
     D400,    # 1st line should end with a period (too many false positives)
-    DAR000,  # (A generic error code thrown when Darglint encountered internal bugs)
+    DAR,     # All the darglint rules, because darglint often produces false positive violations
     LN002,   # doc/comment line too long
     N802,    # function names should be lower case
     N803,    # argument name should be lower case
