--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ install_requires =
     matplotlib>=2.0.0
     scipy>=1.1.0
     numba>=0.38.0,<=0.55.2
-include_package_data = False
+include_package_data = True
 
 [options.packages.find]
 include =
