--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,15 +24,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: tox
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        python -m pip install -e .
-    - name: Lint with flake8
-      run: |
-        flake8 ./PySeismoSoil --count --statistics --ignore=C901,E203,E741,E221,W605,E502,E116,W504,E266,E114,E222 --max-line-length=99 --max-complexity=10
-    - name: Test with pytest
-      run: |
-        pytest
+        tox
