--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,4 +26,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: tox
       run: |
+        python -m pip install --upgrade pip
+        python -m pip install tox
         tox
