Adjust more styles

--- a/tox.ini
+++ b/tox.ini
@@ -20,17 +20,10 @@ commands =
 [flake8]
 max-line-length = 88
 extend-ignore =
-    C901,
-    E203,
-    E741,
-    E221,
-    W605,
-    E502,
-    E116,
-    W504,
-    E266,
-    E114,
-    E222
+    C901,  # complexity
+    E203,  # whitespace before ":"
+    W503,  # line break before binary operator
+    E501,  # line length
 count = true
 statistics = true
 max-complexity = 10
