Add misc flake8 rules and fix styles

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     flake8-basic
+    flake8-misc
     unit-tests
 
 
@@ -15,6 +16,21 @@ skip_install = true
 deps = flake8>=5.0
 commands =
     flake8 .
+
+
+[testenv:flake8-misc]
+skip_install = true
+deps =
+    flake8>=5.0
+    flake8-bugbear
+    flake8-comprehensions
+    flake8-commas
+    flake8-eradicate
+    flake8-broken-line
+    flake8-quotes
+    flake8-debugger
+commands =
+    flake8 --select B,C,D,E800,N4,Q,T .
 
 
 [flake8]
