Fix styles in docstrings

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     flake8-basic
     flake8-misc
+    flake8-docstrings
     unit-tests
 
 
@@ -21,7 +22,6 @@ commands =
 [testenv:flake8-misc]
 skip_install = true
 deps =
-    flake8>=5.0
     flake8-bugbear
     flake8-comprehensions
     flake8-commas
@@ -31,6 +31,14 @@ deps =
     flake8-debugger
 commands =
     flake8 --select B,C,D,E800,N4,Q,T .
+
+
+[testenv:flake8-docstrings]
+skip_install = true
+deps =
+    flake8-docstrings
+commands =
+    flake8 --ignore D100,D104,D105,D107,D400,D205  ./PySeismoSoil
 
 
 [flake8]
