--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     flake8-basic
     flake8-misc
     flake8-docstrings
+    flake8-darglint
     unit-tests
 
 
@@ -39,6 +40,21 @@ deps =
     flake8-docstrings
 commands =
     flake8 --ignore D100,D104,D105,D107,D400,D205  ./PySeismoSoil
+
+
+[testenv:flake8-darglint]
+skip_install = true
+deps =
+    flake8
+    darglint
+commands =
+    flake8 --select DAR --ignore DAR000 ./PySeismoSoil
+
+
+[darglint]
+ignore_regex = ^_(.*)
+docstring_style = numpy
+strictness = long
 
 
 [flake8]
