Add line length check

--- a/tox.ini
+++ b/tox.ini
@@ -30,8 +30,9 @@ deps =
     flake8-broken-line
     flake8-quotes
     flake8-debugger
+    flake8-length
 commands =
-    flake8 --select B,C,D,E800,N4,Q,T .
+    flake8 --select B,C,D,E800,N4,Q,T,LN .
 
 
 [testenv:flake8-docstrings]
@@ -64,6 +65,7 @@ extend-ignore =
     E203,  # whitespace before ":"
     W503,  # line break before binary operator
     E501,  # line length
+    LN002, # doc/comment line too long
 count = true
 statistics = true
 max-complexity = 10
