Fix tox flake8 config issue

--- a/tox.ini
+++ b/tox.ini
@@ -61,11 +61,16 @@ strictness = long
 [flake8]
 max-line-length = 88
 extend-ignore =
-    C901,  # complexity
-    E203,  # whitespace before ":"
-    W503,  # line break before binary operator
-    E501,  # line length
-    LN002, # doc/comment line too long
+    # C901: complexity
+    C901,
+    # E203: whitespace before ":"
+    E203,
+    # W503: line break before binary operator
+    W503,
+    # E501: line length
+    E501,
+    # LN002: doc/comment line too long
+    LN002,
 count = true
 statistics = true
 max-complexity = 10
