Update license classifier

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ url = https://github.com/jsh9/PySeismoSoil
 license = BSD-3-Clause
 license_file = LICENSE
 classifiers =
-    License :: OSI Approved :: BSD-3-Clause License
+    License :: OSI Approved :: BSD 3-Clause "New" or "Revised" License (BSD-3-Clause)
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
 
