--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,9 @@ commands =
 [testenv:flake8-misc]
 skip_install = true
 deps =
+    # Pinning to older flake8 because flake8-commas
+    # is not compatible with newer flake8 versions.
+    flake8==5.0.4
     flake8-bugbear
     flake8-comprehensions
     flake8-commas
@@ -31,8 +34,9 @@ deps =
     flake8-quotes
     flake8-debugger
     flake8-length
+    flake8-clean-block
 commands =
-    flake8 --select B,C,D,E800,N4,Q,T,LN .
+    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB .
 
 
 [testenv:flake8-docstrings]
