Add indent-in-def & picky-parentheses

--- a/tox.ini
+++ b/tox.ini
@@ -35,8 +35,10 @@ deps =
     flake8-debugger
     flake8-length
     flake8-clean-block
+    flake8-indent-in-def
+    flake8-picky-parentheses
 commands =
-    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB .
+    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR .
 
 
 [testenv:flake8-docstrings]
