--- a/tox.ini
+++ b/tox.ini
@@ -37,8 +37,9 @@ deps =
     flake8-clean-block
     flake8-indent-in-def
     flake8-picky-parentheses
+    flake8-implicit-str-concat
 commands =
-    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR .
+    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR,ISC .
 
 
 [testenv:flake8-docstrings]
