--- a/tox.ini
+++ b/tox.ini
@@ -38,8 +38,9 @@ deps =
     flake8-indent-in-def
     flake8-picky-parentheses
     flake8-implicit-str-concat
+    flake8-return
 commands =
-    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR,ISC .
+    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR,ISC,R .
 
 
 [testenv:flake8-docstrings]
@@ -78,6 +79,8 @@ extend-ignore =
     E501,
     # LN002: doc/comment line too long
     LN002,
+    # R504: unnecessary variable assignment before return statement
+    R504,
 count = true
 statistics = true
 max-complexity = 10
