--- a/tox.ini
+++ b/tox.ini
@@ -39,8 +39,9 @@ deps =
     flake8-picky-parentheses
     flake8-implicit-str-concat
     flake8-return
+    flake8-broken-line
 commands =
-    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR,ISC,R .
+    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR,ISC,R,N400 .
 
 
 [testenv:flake8-docstrings]
