Add more flake8 linters (#10)
* Add flake8-clean-block

* Add indent-in-def & picky-parentheses

* Add implicit-str-concat

* Add flake8-return

* Add flake8-broken-line

* Remove unnecessary blank line

* Add Python 3.11 checks

* Remove Python 3.11 checks

* Change incorrect unpacking

* v0.5.2 -> v0.5.3

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,9 @@ commands =
 [testenv:flake8-misc]
 skip_install = true
 deps =
+    # Pinning to older flake8 because flake8-commas
+    # is not compatible with newer flake8 versions.
+    flake8==5.0.4
     flake8-bugbear
     flake8-comprehensions
     flake8-commas
@@ -31,8 +34,14 @@ deps =
     flake8-quotes
     flake8-debugger
     flake8-length
+    flake8-clean-block
+    flake8-indent-in-def
+    flake8-picky-parentheses
+    flake8-implicit-str-concat
+    flake8-return
+    flake8-broken-line
 commands =
-    flake8 --select B,C,D,E800,N4,Q,T,LN .
+    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR,ISC,R,N400 .
 
 
 [testenv:flake8-docstrings]
@@ -71,6 +80,8 @@ extend-ignore =
     E501,
     # LN002: doc/comment line too long
     LN002,
+    # R504: unnecessary variable assignment before return statement
+    R504,
 count = true
 statistics = true
 max-complexity = 10
