--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,41 @@
 [tox]
 envlist =
+    py38
+    py39
+    py310
+    py311
+    mypy
+    cercis
+    pydoclint
     flake8-basic
     flake8-misc
     flake8-docstrings
-    flake8-darglint
-    unit-tests
+    pre-commit
 
 
-[testenv:unit-tests]
-deps = pytest
+[gh-actions]
+python =
+    3.8: py38, cercis, check-self, flake8-basic, flake8-misc, flake8-docstrings, pre-commit
+    3.9: py39, cercis, check-self, flake8-basic, flake8-misc, flake8-docstrings, pre-commit
+    3.10: py310, cercis, check-self, flake8-basic, flake8-misc, flake8-docstrings, pre-commit
+    3.11: py311, cercis, check-self, flake8-basic, flake8-misc, flake8-docstrings, pre-commit
+
+
+[testenv:cercis]
+deps =
+    cercis
+skip_install = true
 commands =
-    pytest .
+    # use the '--check' flag to avoid accidentally formatting code
+    cercis --check --diff PySeismoSoil tests
+
+
+[testenv:pydoclint]
+deps =
+    pydoclint
+skip_install = true
+commands =
+    pydoclint --style=numpy PySeismoSoil
 
 
 [testenv:flake8-basic]
@@ -23,12 +48,8 @@ commands =
 [testenv:flake8-misc]
 skip_install = true
 deps =
-    # Pinning to older flake8 because flake8-commas
-    # is not compatible with newer flake8 versions.
-    flake8==5.0.4
     flake8-bugbear
     flake8-comprehensions
-    flake8-commas
     flake8-eradicate
     flake8-broken-line
     flake8-quotes
@@ -49,39 +70,38 @@ skip_install = true
 deps =
     flake8-docstrings
 commands =
-    flake8 --ignore D100,D104,D105,D107,D400,D205  ./PySeismoSoil
+    flake8 --ignore D100,D104,D105,D107,D400,D205 --select D ./PySeismoSoil
 
 
-[testenv:flake8-darglint]
+[testenv]
+deps = pytest
+commands =
+    pytest --tb=long .
+
+
+[testenv:pre-commit]
 skip_install = true
 deps =
-    flake8
-    darglint
+    pre-commit
+set_env =
+    # Skipping auto-formatter here to avoid accidentally formatting code
+    SKIP = cercis
 commands =
-    flake8 --select DAR --ignore DAR000 ./PySeismoSoil
-
-
-[darglint]
-ignore_regex = ^_(.*)
-docstring_style = numpy
-strictness = long
+    pre-commit run -a
 
 
 [flake8]
 max-line-length = 88
 extend-ignore =
-    # C901: complexity
-    C901,
-    # E203: whitespace before ":"
-    E203,
-    # W503: line break before binary operator
-    W503,
     # E501: line length
     E501,
     # LN002: doc/comment line too long
     LN002,
-    # R504: unnecessary variable assignment before return statement
-    R504,
+    # W503 and W504 are mutually exclusive; we choose to follow W504
+    W503,
 count = true
 statistics = true
 max-complexity = 10
+exclude =
+    .*,
+    venv/*,
