Pin cercis version

--- a/tox.ini
+++ b/tox.ini
@@ -23,11 +23,12 @@ python =
 
 [testenv:cercis]
 deps =
-    cercis
+    cercis==0.2.3
 skip_install = true
 commands =
+    cercis --version
     # use the '--check' flag to avoid accidentally formatting code
-    cercis --check --diff PySeismoSoil tests
+    cercis --wrap-line-with-long-string=True --check --diff PySeismoSoil tests
 
 
 [testenv:pydoclint]
