--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ classifiers =
 packages = find_namespace:
 install_requires =
     matplotlib>=2.0.0
-    numba>=0.38.0,<=0.55.2
+    numba>=0.38.0
     numpy>=1.11.0
     scipy>=1.1.0
 python_requires = >=3.7
