Fix flake8; add pydoclint

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     flake8-basic
     flake8-misc
     flake8-docstrings
+    pydoclint
     pre-commit
 
 
@@ -62,6 +63,14 @@ deps =
     flake8-docstrings
 commands =
     flake8 --ignore D100,D104,D105,D107,D400,D205 --select D ./PySeismoSoil
+
+
+[testenv:pydoclint]
+skip_install = true
+deps =
+    pydoclint
+commands =
+    pydoclint ./PySeismoSoil
 
 
 [testenv]
