--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
     rev: 0.2.3
     hooks:
       - id: cercis
+      - id: cercis-jupyter
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.3
