--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ install_requires =
     numba>=0.38.0
     numpy>=1.11.0
     scipy>=1.1.0
+    PyWavelets>=1.3.0
 python_requires = >=3.8
 include_package_data = True
 
