--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = PySeismoSoil
-version = v0.5.4
+version = v0.6.0
 description = A Python library for performing 1D seismic site response analysis
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/jsh9/PySeismoSoil
+url = https://caltech-geoquake.github.io/PySeismoSoil/
 license = BSD-3-Clause
 license_file = LICENSE
 classifiers =
