Add Python 3.12 & 3.13 support (#31)
* Add Python 3.12 & 3.13 support

* Fix py312 pipelines

* Auto-format code

* Migrate to pyproject.toml; add changelog

* Fix doc building script; bump version

* Skip doc building step on non-main branches

--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -26,6 +26,10 @@ concurrency:
 jobs:
   build_docs_and_deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
