Reverting some changes + pytest adjustment

--- a/tox.ini
+++ b/tox.ini
@@ -4,18 +4,20 @@ envlist =
     py311
     py312
     py313
-    muff-lint
-    muff-format
+    cercis
+    flake8-basic
+    flake8-misc
+    flake8-docstrings
     pydoclint
     pre-commit
 
 
 [gh-actions]
 python =
-    3.10: py310, muff-lint, muff-format, pydoclint, pre-commit
-    3.11: py311, muff-lint, muff-format, pydoclint, pre-commit
-    3.12: py312, muff-lint, muff-format, pydoclint, pre-commit
-    3.13: py313, muff-lint, muff-format, pydoclint, pre-commit
+    3.10: py310, cercis, check-self, flake8-basic, flake8-misc, flake8-docstrings, pre-commit
+    3.11: py311, cercis, check-self, flake8-basic, flake8-misc, flake8-docstrings, pre-commit
+    3.12: py312, cercis, check-self, flake8-basic, flake8-misc, flake8-docstrings, pre-commit
+    3.13: py313, cercis, check-self, flake8-basic, flake8-misc, flake8-docstrings, pre-commit
 
 
 [testenv]
@@ -24,21 +26,49 @@ commands =
     pytest --tb=long .
 
 
-[testenv:muff-lint]
+[testenv:cercis]
 deps =
-    muff
+    cercis==0.2.3
 skip_install = true
 commands =
-    muff check --fix --config=muff.toml PySeismoSoil tests
+    cercis --version
+    # use the '--check' flag to avoid accidentally formatting code
+    cercis --wrap-line-with-long-string=True --check --diff PySeismoSoil tests
 
 
-[testenv:muff-format]
-deps =
-    muff
+[testenv:flake8-basic]
 skip_install = true
+deps = flake8>=5.0
 commands =
-    # use the '--diff' flag to avoid accidentally formatting code
-    muff format --diff --config=muff.toml PySeismoSoil tests
+    flake8 .
+
+
+[testenv:flake8-misc]
+skip_install = true
+deps =
+    flake8-bugbear
+    flake8-comprehensions
+    flake8-eradicate
+    flake8-broken-line
+    flake8-quotes
+    flake8-debugger
+    flake8-length
+    flake8-clean-block
+    flake8-indent-in-def
+    flake8-picky-parentheses
+    flake8-implicit-str-concat
+    flake8-return
+    flake8-broken-line
+commands =
+    flake8 --select B,C,D,E800,N4,Q,T,LN,CLB,IND,PAR,ISC,R,N400 .
+
+
+[testenv:flake8-docstrings]
+skip_install = true
+deps =
+    flake8-docstrings
+commands =
+    flake8 --ignore D100,D104,D105,D107,D400,D205 --select D ./PySeismoSoil
 
 
 [testenv:pydoclint]
@@ -49,12 +79,38 @@ commands =
     pydoclint ./PySeismoSoil
 
 
+[testenv]
+deps = pytest
+commands =
+    pytest --tb=long .
+
+
 [testenv:pre-commit]
 skip_install = true
 deps =
     pre-commit
 set_env =
     # Skipping auto-formatter here to avoid accidentally formatting code
-    SKIP = muff-format
+    SKIP = cercis
 commands =
     pre-commit run -a
+
+
+[flake8]
+max-line-length = 79
+extend-ignore =
+    # E501: line length
+    E501,
+    # LN002: doc/comment line too long
+    LN002,
+    # W503 and W504 are mutually exclusive; we choose to follow W504
+    W503,
+    E203,
+    C901,
+    R504,
+count = true
+statistics = true
+max-complexity = 10
+exclude =
+    .*,
+    venv/*,
