--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,48 +1,32 @@
----
 repos:
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+
+  - repo: https://github.com/jsh9/cercis
+    rev: 0.2.3
+    hooks:
+      - id: cercis
+      - id: cercis-jupyter
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.3
+    hooks:
+      - id: prettier
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v6.0.0
+    rev: v4.5.0
     hooks:
-      - id: trailing-whitespace
       - id: end-of-file-fixer
-      - id: debug-statements
-      - id: double-quote-string-fixer
-      - id: requirements-txt-fixer
-      - id: pretty-format-json
-        args: [--no-ensure-ascii, --indent=4, --no-sort-keys]
-        exclude: \.ipynb$
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.21.0
+      - id: trailing-whitespace
+
+  - repo: https://github.com/pre-commit/pre-commit
+    rev: v3.5.0
     hooks:
-      - id: pyupgrade
-        args: [--py310-plus]
-  - repo: https://github.com/jsh9/muff-pre-commit
-    rev: 0.13.2
-    hooks:
-      - id: muff-format
-        args: [--config, muff.toml]
-  - repo: https://github.com/jsh9/blank-line-after-blocks
-    rev: 0.1.4
-    hooks:
-      - id: blank-line-after-blocks
-      - id: blank-line-after-blocks-jupyter
-  - repo: https://github.com/lyz-code/yamlfix
-    rev: 1.18.0
-    hooks:
-      - id: yamlfix
-  - repo: https://github.com/hukkin/mdformat
-    rev: 0.7.22
-    hooks:
-      - id: mdformat
-        args: [--wrap, '79', --number]
-        additional_dependencies: [mdformat-tables]
+      - id: validate_manifest
+
   - repo: https://github.com/jsh9/markdown-toc-creator
-    rev: 0.0.11
+    rev: 0.0.6
     hooks:
       - id: markdown-toc-creator
-  - repo: https://github.com/jsh9/format-docstring
-    rev: 0.1.4
-    hooks:
-      - id: format-docstring
-        name: Format docstrings in .py files
-        args: [--line-length=79]
