--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,4 +44,4 @@ wrap-line-with-long-string = true
 
 [tool.pydoclint]
 style = 'numpy'
-exclude = '\.git|.?venv|\.tox|\.ipynb_checkpoints'
+exclude = '\.git|.?venv|\.tox'
