Remove 760m/s boundary on μ formula (G/Gmax param) in HH model (#35)
* Update helper_hh_calibration.py

We remove the 760m/s Vs limit which was resulting in occasional instabilities for smooth Vs profiles that cross the 760m/s boundary. (correct this time)

* Minor comment edit

Removed the initials and date on the explanatory comment in the code

* Adjusting test corresponding to hh calibration

* Fixing hh calibration test

* Modified test file for param from profile

* Minor formatting edit

* Update test_class_hh_calibration.py benchmarks

Modified the benchmark in case_2_with_both_Vs_profile_and_GGmax_curves()

* Minor formatting edits

* Commas formatting

* Update test for deprecation warning

Addressing DeprecationWarning: Passing None into shape arguments as an alias for () is deprecated.

* Formatting fix

* Python version and changelog edits

* Workflow edit

* Reverting test change

* More workflow changes

* Reverting some changes + pytest adjustment

* Fix testenv

* Changelog and readme edits

* Reverting some changes

* Formatting and test_helper_generic edit

--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -1,28 +1,24 @@
+---
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
-
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
+    branches: [main]
   pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   id-token: write
   pages: write
   contents: read
-
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: false
-
 jobs:
   build_docs_and_deploy:
     runs-on: ubuntu-latest
@@ -54,7 +50,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: "./docs/build/html"
+          path: ./docs/build/html
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
